--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "element-plus": "^1.0.2-beta.65",
     "less-loader": "^5.0.0",
     "vue": "^3.0.0",
-    "vue-router": "^4.0.0-0"
+    "vue-router": "^4.0.0-0",
+    "vue-table-with-tree-grid": "^0.2.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
