--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@vueup/vue-quill": "^1.0.0-alpha.40",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "echarts": "^5.1.2",
     "element-plus": "^1.0.2-beta.65",
     "less-loader": "^5.0.0",
+    "lodash": "^4.17.21",
     "quill": "^1.3.7",
     "tinymce": "^5.8.2",
     "vue": "^3.0.0",
